--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,9 +1,19 @@
 aside{
-    padding: 10px;
+    padding: 30px 10px 10px 10px;
     width: 100%;
     background-color: #282828;
     display: flex;
     color: aliceblue;
     flex-direction: column;
+    align-items: center;
+}
+
+aside .sideEle{
+    padding: 10px;
+    width: 80%;
     
+}
+
+aside .sideEleSelected{
+    background-color: #363636;
 }
