--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -3,3 +3,45 @@
     grid-template-columns: 300px auto;
     height: 94vh;
 }
+
+.content{
+    
+    background-color: #1e1e1e;
+    color: aliceblue;
+    display: flex;
+    /* justify-content: space-around; */
+    flex-direction: column;
+    /* justify-content: space-evenly; */
+    align-items: center;
+}
+
+.new-add{
+    margin-top: 20px;
+    /* background-color: aliceblue; */
+    /* color: #1e1e1e; */
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 10px;
+    width: 90%;
+}
+
+.new-add input {
+    width: 100%;
+    display: block;
+    border: none;
+    border-bottom: 1px solid #999;
+    /* padding: 6px 30px; */
+    font-family: Poppins;
+    box-sizing: border-box;
+    background-color: #1e1e1e;
+    color: aliceblue;
+}
+
+.new-add input:focus {
+
+    background-color: #1e1e1e;
+    color: aliceblue;
+}
+
+
+
