--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -7,6 +7,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     /* justify-content: ; */
+    /* box-shadow: 0px 40px 60px rgba(255, 255, 255, 0.1); */
 }
 
 nav .navele{
