--- a/src/assets/css/Dashboard.css
+++ b/src/assets/css/Dashboard.css
@@ -51,8 +51,10 @@
 }
 
 .to-do .taskGroup{
-    width: 100%;
+    width: 45%;
 }
+
+
 
 .to-do .Heading{
     font-size: 30px;
@@ -69,9 +71,13 @@
     justify-content: space-around;
 }
 
-.to-do .task button{
-    background-color: ;
+.to-do .task:hover{
+    width: 102%;
 }
+
+/* .to-do .task button{
+    background-color: ;
+} */
 
 .to-do .task textarea {
     width: 80%;
