mobile responsive updated

--- a/src/assets/css/Sidebar.css
+++ b/src/assets/css/Sidebar.css
@@ -24,3 +24,9 @@ aside .sideEleSelected{
     color: #363636;
     background-color: aliceblue;
 }
+
+@media (max-width: 1000px) {
+    aside{
+        display: none;
+    }
+}
