--- a/src/assets/css/Dashboard.css
+++ b/src/assets/css/Dashboard.css
@@ -61,14 +61,19 @@
 }
 
 .to-do{
-    margin-top: 20px;
+   
     width: 90%;
     display: flex;
     justify-content: space-around;
 }
 
 .to-do .taskGroup{
+    margin-top: 20px;
     width: 45%;
+    background-color: #333333;
+    border-radius: 10px;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 
@@ -109,7 +114,26 @@
 }
 
 
-
+@media (max-width: 1000px) {
+    .mainDiv{
+        display: flex;
+        /* grid-template-columns: 300px auto; */
+        height: 94vh;
+    }
+    .content{
+        width: 100%;
+    }
+    .to-do{
+        margin-top: 20px;
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    .to-do .taskGroup{
+        width: 100%;
+    }
+}
 
 
 
