--- a/src/assets/css/Navbar.css
+++ b/src/assets/css/Navbar.css
@@ -23,10 +23,18 @@ nav .navele .username{
     /* border-right: 1px solid white; */
     padding: 0px;
     margin: 0px;
+    display: flex;
+    justify-content: space-evenly;
+
+    /* text-align: center; */
+    /* height: 100% */
     /* height: 100%; */
 
 }
 
+nav .MenuIcon{
+    display: none;
+}
 
 
 nav .searchBar input{
@@ -54,6 +62,14 @@ nav .searchBar input{
     cursor: pointer;
     margin-right: 10px; /* Move the logout button to the right */
     background-color: rgb(255, 48, 48);
+    
 
+}
+
+
+@media (max-width: 1000px) {
+    nav .MenuIcon{
+        display: block;
+    }
 }
 
