--- a/src/assets/css/Dashboard.css
+++ b/src/assets/css/Dashboard.css
@@ -6,20 +6,24 @@
 
 .content{
     
-    background-color: #1e1e1e;
+    background-image: url('/back.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #000000;
     color: aliceblue;
     display: flex;
     /* justify-content: space-around; */
     flex-direction: column;
     /* justify-content: space-evenly; */
     align-items: center;
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
 }
 
 .TodayInfo{
     margin-top: 20px;
     width: 90%;
 }
-
 
 
 
