--- a/src/assets/css/Navbar.css
+++ b/src/assets/css/Navbar.css
@@ -6,6 +6,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
     /* justify-content: ; */
     /* box-shadow: 0px 40px 60px rgba(255, 255, 255, 0.1); */
 }
@@ -70,6 +71,9 @@ nav .searchBar input{
 @media (max-width: 1000px) {
     nav .MenuIcon{
         display: block;
+    }
+    nav{
+        position: fixed;
     }
     
 }
