--- a/src/assets/css/Dashboard.css
+++ b/src/assets/css/Dashboard.css
@@ -79,7 +79,7 @@
 .to-do .taskGroup{
     margin-top: 20px;
     /* width: 100%; */
-    background-color: #333333;
+    background-color: rgba(51, 51, 51, 0.8);
     border-radius: 10px;
     padding: 10px;
     box-sizing: border-box;
